--- a/src/features/catalog/catalogCard/components/match/ui/styles.module.scss
+++ b/src/features/catalog/catalogCard/components/match/ui/styles.module.scss
@@ -120,6 +120,11 @@
     p {
       line-height: 1.7;
       color: #8e54e9;
+
+      @media (max-width: 768px) {
+        line-height: 1.3;
+        text-align: left;
+      }
     }
   }
 
