--- a/src/entities/platform/ui/utils/copyTextBtn/styles.module.scss
+++ b/src/entities/platform/ui/utils/copyTextBtn/styles.module.scss
@@ -9,7 +9,7 @@
   align-items: center;
   cursor: pointer;
 
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.6);
   backdrop-filter: blur(20px);
   border-radius: 999px;
   padding: 12px 6px;
@@ -17,14 +17,24 @@
   transition: all 300ms ease;
 
   &:hover {
-    transform: scale(1.05);
+    transform: scale(1.025);
     transition: all 300ms ease;
     background: rgba(255, 255, 255, 0.8);
+
+    @media (max-width: 576px) {
+      transform: scale(1);
+      transition: all 300ms ease;
+    }
   }
 
   &:active {
     transform: scale(0.99);
     transition: all 300ms ease;
+
+    @media (max-width: 576px) {
+      transform: scale(1);
+      transition: all 300ms ease;
+    }
   }
 
   @media (max-width: 992px) {
