--- a/src/features/catalog/catalogCard/UI/styles.module.scss
+++ b/src/features/catalog/catalogCard/UI/styles.module.scss
@@ -172,6 +172,36 @@
             line-height: 1;
             color: var(--Personal-colors-main);
 
+            .languages {
+              display: grid;
+              grid-auto-flow: column;
+              gap: 5px;
+              align-items: center;
+              justify-content: start;
+              justify-items: start;
+              align-content: start;
+              margin-top: 2px;
+              border-radius: 5px;
+              background: rgba(15, 105, 201, 0.1);
+              width: max-content;
+              // min-width: 40px;
+              padding: 3px;
+
+              @media (max-width: 576px) {
+                border-radius: 2.5px;
+              }
+
+              &__icon {
+                width: 12px;
+                height: 12px;
+
+                @media (max-width: 576px) {
+                  width: 10px;
+                  height: 10px;
+                }
+              }
+            }
+
             @media (max-width: 576px) {
               font-weight: 500;
             }
