fix: add app Tooltip main provider and add onClick open in infoTooltip & styles

--- a/src/shared/ui/infoTooltip/styles.module.scss
+++ b/src/shared/ui/infoTooltip/styles.module.scss
@@ -20,5 +20,9 @@
     line-height: normal;
     text-align: justify;
     text-indent: 20px;
+
+    @media (max-width: 768px) {
+      font-size: 10px;
+    }
   }
 }
