--- a/src/features/other/selectSex/UI/styles.module.scss
+++ b/src/features/other/selectSex/UI/styles.module.scss
@@ -56,7 +56,7 @@
   font-size: 16px;
   font-weight: 500;
 
-  &.isCatalog {
+  &.iconsAboveSlider {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto auto;
 
