feat: some fixes

--- a/src/features/channel/recommendCard/UI/styles.module.scss
+++ b/src/features/channel/recommendCard/UI/styles.module.scss
@@ -81,7 +81,7 @@
               border-radius: 5px;
               background: rgba(15, 105, 201, 0.1);
               width: max-content;
-              min-width: 40px;
+              // min-width: 40px;
               padding: 3px;
 
               @media (max-width: 576px) {
