--- a/src/widgets/channel/myChannels/activeChannels/card/UI/styles.module.scss
+++ b/src/widgets/channel/myChannels/activeChannels/card/UI/styles.module.scss
@@ -124,6 +124,11 @@
             height: 60px;
           }
 
+          @media (max-width: 576px) {
+            width: 40px;
+            height: 40px;
+          }
+
           img {
             width: 100%;
             height: 100%;
@@ -190,6 +195,10 @@
             color: car(--Personal-colors-black);
             font-size: var(--font-size-option-item-xl);
             font-weight: 600;
+
+            @media (max-width: 576px) {
+              font-size: 12px;
+            }
           }
 
           > span {
@@ -198,7 +207,7 @@
             font-weight: 500;
 
             @media (max-width: 576px) {
-              font-size: 14px;
+              font-size: 10px;
             }
           }
 
