--- a/src/widgets/offer/myOffers/card/UI/styles.module.scss
+++ b/src/widgets/offer/myOffers/card/UI/styles.module.scss
@@ -72,25 +72,40 @@
           height: 50px;
           border-radius: 50%;
           border: 0.5px solid var(--Personal-colors-main);
+
+          @media (max-width: 576px) {
+            width: 40px;
+            height: 40px;
+          }
         }
 
         div {
           display: grid;
           grid-auto-flow: row;
           row-gap: 10px;
+
           p {
             color: var(--Personal-colors-black);
             font-size: 16px;
             font-style: normal;
             font-weight: 600;
             line-height: 1;
+
+            @media (max-width: 576px) {
+              font-size: 12px;
+            }
           }
+
           span {
             color: rgba(0, 0, 0, 0.6);
             font-size: 12px;
             font-style: normal;
             font-weight: 500;
             line-height: 1;
+
+            @media (max-width: 576px) {
+              font-size: 10px;
+            }
           }
         }
       }
