--- a/src/shared/ui/MyPagination/styles.module.scss
+++ b/src/shared/ui/MyPagination/styles.module.scss
@@ -1,24 +1,22 @@
 .wrapper {
   display: grid;
   justify-content: center;
-  padding: 5px 10px;
+  padding: 5px 0px;
 
   .pagination {
     display: grid;
     grid-template: 1fr / repeat(var(--count), 1fr);
-    column-gap: 10px;
-    overflow: auto;
     padding: 5px 0px;
 
     .point {
-      width: 8px;
-      height: 8px;
-      border-radius: 50%;
+      height: 4px;
+      border-radius: 0px;
       background: #dedede;
 
       &.active {
         background: var(--Gradients-Gradient-1);
-        transform: scale(1.5);
+        transform: scale(1.25);
+        border-radius: 5px;
       }
     }
   }
