--- a/src/shared/ui/multiSelect/styles.module.scss
+++ b/src/shared/ui/multiSelect/styles.module.scss
@@ -32,9 +32,11 @@
       line-height: normal;
 
       .filter {
-        display: grid;
-        grid-template-columns: max-content 1fr;
-        column-gap: 10px;
+        display: flex;
+        gap: 10px;
+        // display: grid;
+        // grid-template-columns: max-content 1fr;
+        // column-gap: 10px;
       }
     }
 
@@ -48,10 +50,12 @@
 }
 
 .item {
-  display: grid;
-  grid-template-columns: max-content 1fr;
+  display: flex;
+  gap: 10px;
+  // display: grid;
+  // grid-template-columns: max-content 1fr;
+  // column-gap: 10px;
   align-items: center;
-  column-gap: 10px;
   padding: 8px 10px;
   cursor: pointer;
   width: 100%;
