--- a/src/features/offer/sendLink/UI/styles.module.scss
+++ b/src/features/offer/sendLink/UI/styles.module.scss
@@ -38,11 +38,11 @@
   height: 100%;
   width: 100%;
   padding: 30px;
+  padding-top: 15px;
 }
 
 .description {
   color: #2d2d2d;
-  margin-bottom: 30px;
 
   &__title {
     font-size: 12px;
@@ -61,13 +61,12 @@
   display: grid;
   grid-template: 1fr / 1fr auto;
   gap: 5px;
-  padding: 0px 10px;
 
   &__input {
     column-span: 2;
     border-radius: 5px;
     padding: 8px;
-    box-shadow: inset 0 0 0.5px 0.5px rgba(71, 114, 230, 1);
+    box-shadow: inset 0 0 3px 0.5px rgba(71, 114, 230, 1);
     width: 100%;
     font-size: 16px;
     color: #2d2d2d;
@@ -88,7 +87,7 @@
   }
 
   &__send_icon {
-    box-shadow: inset 0 0 0.5px 0.5px rgba(71, 114, 230, 1);
+    box-shadow: inset 0 0 3px 0.5px rgba(71, 114, 230, 1);
     cursor: pointer;
     color: var(--Personal-colors-main);
     background: #fff;
