--- a/src/features/catalog/catalogCard/UI/styles.module.scss
+++ b/src/features/catalog/catalogCard/UI/styles.module.scss
@@ -49,12 +49,21 @@
         column-gap: 12px;
       }
 
+      @media (max-width: 576px) {
+        align-items: stretch;
+        column-gap: 12px;
+      }
+
       .logo {
         display: grid;
         grid-auto-flow: row;
         row-gap: 10px;
         justify-content: center;
         justify-items: center;
+
+        @media (max-width: 576px) {
+          row-gap: 5px;
+        }
 
         &__img_wrapper {
           width: 80px;
@@ -68,6 +77,11 @@
             height: 60px;
           }
 
+          @media (max-width: 576px) {
+            width: 40px;
+            height: 40px;
+          }
+
           img {
             width: 100%;
             height: 100%;
@@ -77,6 +91,10 @@
         .rate {
           svg {
             width: 80px;
+
+            @media (max-width: 768px) {
+              width: 60px;
+            }
           }
         }
       }
@@ -163,6 +181,7 @@
 
           @media (max-width: 576px) {
             row-gap: 5px;
+            height: 100%;
           }
 
           .title {
@@ -216,6 +235,7 @@
 
             @media (max-width: 576px) {
               font-weight: 400;
+              line-height: 1;
             }
           }
         }
