--- a/src/features/channel/recommendCard/UI/styles.module.scss
+++ b/src/features/channel/recommendCard/UI/styles.module.scss
@@ -30,6 +30,10 @@
       grid-template: 1fr / max-content 1fr min-content;
       column-gap: 20px;
 
+      @media (max-width: 576px) {
+        column-gap: 10px;
+      }
+
       .logo {
         display: grid;
         grid-auto-flow: row;
@@ -61,6 +65,10 @@
           grid-auto-flow: row;
           row-gap: 10px;
           margin-top: 5px;
+
+          @media (max-width: 576px) {
+            margin-top: 0px;
+          }
 
           .title {
             color: var(--Personal-colors-main);
