--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -254,22 +254,22 @@ main {
   }
 }
 
-.blur {
-  position: relative;
-  z-index: 1;
-  pointer-events: none;
+// .custom_blur {
+//   position: relative;
+//   z-index: 20;
+//   pointer-events: none;
 
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    // background-color: rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(5px);
-  }
-}
+//   &::before {
+//     content: "";
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     // background-color: rgba(255, 255, 255, 0.5);
+//     backdrop-filter: blur(5px);
+//   }
+// }
 
 .shake__animation {
   animation:
