--- a/src/features/channel/recommendCard/UI/styles.module.scss
+++ b/src/features/channel/recommendCard/UI/styles.module.scss
@@ -16,6 +16,10 @@
     padding-bottom: 0px;
     row-gap: 20px;
 
+    @media (max-width: 768px) {
+      row-gap: 12px;
+    }
+
     .description {
       color: var(--Subtitle-text);
       font-size: 12px;
@@ -30,8 +34,14 @@
       grid-template: 1fr / max-content 1fr min-content;
       column-gap: 20px;
 
+      @media (max-width: 768px) {
+        align-items: center;
+        column-gap: 12px;
+      }
+
       @media (max-width: 576px) {
-        column-gap: 10px;
+        align-items: stretch;
+        column-gap: 12px;
       }
 
       .logo {
@@ -41,16 +51,34 @@
         justify-content: center;
         justify-items: center;
 
+        @media (max-width: 576px) {
+          row-gap: 5px;
+        }
+
         img {
           width: 80px;
           height: 80px;
           border-radius: 50%;
           border: 0.5px solid var(--Personal-colors-main);
+
+          @media (max-width: 768px) {
+            width: 60px;
+            height: 60px;
+          }
+
+          @media (max-width: 576px) {
+            width: 40px;
+            height: 40px;
+          }
         }
 
         .rate {
           svg {
             width: 80px;
+
+            @media (max-width: 768px) {
+              width: 60px;
+            }
           }
         }
       }
@@ -147,7 +175,7 @@
       display: grid;
       grid-auto-flow: row;
       row-gap: 15px;
-      margin-top: 15px;
+      padding-top: 15px;
     }
 
     .channel__content[data-state="open"] {
@@ -177,6 +205,7 @@
         div {
           display: grid;
           justify-content: center;
+
           svg {
             width: auto;
             height: 16px;
@@ -190,12 +219,16 @@
           font-style: normal;
           font-weight: 600;
           line-height: 1;
+
+          @media (max-width: 576px) {
+            font-size: 12px;
+          }
         }
 
         span {
           color: var(--Personal-colors-black);
           text-align: center;
-          font-size: 14px;
+          font-size: 12px;
           font-style: normal;
           font-weight: 500;
           line-height: 1;
@@ -235,11 +268,8 @@
     justify-content: center;
     align-items: center;
     padding: 10px;
+
     p {
-      background: var(--Gradients-Gradient-1);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
       font-size: 10px;
       font-style: normal;
       font-weight: 600;
