--- a/src/features/catalog/catalogCard/skeleton/styles.module.scss
+++ b/src/features/catalog/catalogCard/skeleton/styles.module.scss
@@ -23,7 +23,7 @@
       column-gap: 20px;
 
       @media (max-width: 992px) {
-        grid-template: 1fr / 1fr 4fr 2fr;
+        grid-template: 1fr / 1fr 4fr auto;
       }
 
       .channel__rate {
