--- a/src/features/other/priceList/buyTarif/UI/styles.module.scss
+++ b/src/features/other/priceList/buyTarif/UI/styles.module.scss
@@ -136,6 +136,23 @@
     justify-content: center;
     padding: 40px 10px;
     text-align: center;
+
+    .go_to_order_button {
+      padding: 15px;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+
+      div {
+        width: 20px;
+
+        svg {
+          width: 100%;
+          height: auto;
+        }
+      }
+    }
   }
 
   &__content {
