fix: rework manager card/subcard

--- a/src/entities/project/ui/managerSubcard/UI/styles.module.scss
+++ b/src/entities/project/ui/managerSubcard/UI/styles.module.scss
@@ -8,12 +8,8 @@
   @media (max-width: 768px) {
     padding: 0;
     border-bottom: 0;
-    grid-template: repeat(3, min-content) 1fr / 1fr;
+    grid-template: repeat(2, min-content) 1fr / 1fr;
     height: 100%;
-
-    &.no__chat {
-      grid-template: repeat(2, min-content) 1fr / 1fr;
-    }
   }
 
   .subcard {
@@ -302,7 +298,7 @@
       text-align: center;
       align-content: center;
       row-gap: 10px;
-      padding: 0 20px;
+      // padding: 0 20px;
       height: 100%;
 
       p {
@@ -351,8 +347,9 @@
         row-gap: 5px;
 
         &__top {
-          display: grid;
-          grid-template: 1fr / 1fr 1fr;
+          // display: grid;
+          // grid-template: 1fr / 1fr 1fr;
+          display: flex;
           column-gap: 5px;
         }
       }
