--- a/src/widgets/project/manager/UI/managerProject/card/UI/styles.module.scss
+++ b/src/widgets/project/manager/UI/managerProject/card/UI/styles.module.scss
@@ -570,6 +570,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
+  min-height: 40px;
 
   color: var(--Personal-colors-White);
   font-size: 12px;
