--- a/src/entities/project/ui/subcard/UI/styles.module.scss
+++ b/src/entities/project/ui/subcard/UI/styles.module.scss
@@ -312,7 +312,7 @@
       text-align: center;
       align-content: center;
       row-gap: 10px;
-      padding: 0 20px;
+      // padding: 0 20px;
       height: 100%;
 
       > div {
