--- a/src/features/order/changeChannel/UI/styles.module.scss
+++ b/src/features/order/changeChannel/UI/styles.module.scss
@@ -17,6 +17,14 @@
   max-height: 400px;
   padding: 40px;
 
+  @media (max-width: 768px) {
+    max-height: unset;
+    max-width: unset;
+    width: unset;
+    height: 100%;
+    padding: 30px;
+  }
+
   .title {
     display: grid;
     grid-auto-flow: column;
@@ -26,6 +34,10 @@
       font-style: normal;
       font-weight: 600;
       line-height: normal;
+
+      @media (max-width: 768px) {
+        font-size: 20px;
+      }
     }
 
     .close {
@@ -47,5 +59,9 @@
     font-style: normal;
     font-weight: 600;
     line-height: normal;
+
+    @media (max-width: 768px) {
+      font-size: 12px;
+    }
   }
 }
