--- a/src/features/channel/createChannel/UI/styles.module.scss
+++ b/src/features/channel/createChannel/UI/styles.module.scss
@@ -41,7 +41,7 @@
 
   border-radius: 40px 40px 0px 40px;
   max-width: 500px;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16);
 
   color: var(--Personal-colors-black);
 
