--- a/src/features/other/priceList/buySidebar/UI/styles.module.scss
+++ b/src/features/other/priceList/buySidebar/UI/styles.module.scss
@@ -9,7 +9,7 @@
     right: 0; /* Скрываем за пределами экрана */
     background-color: var(--Personal-colors-White);
     border: 1px solid var(--black-10);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16);
     z-index: 10;
 
     .text {
