--- a/src/pages/layouts/components/headerAdmin/UI/dropdownMenu/UI/styles.module.scss
+++ b/src/pages/layouts/components/headerAdmin/UI/dropdownMenu/UI/styles.module.scss
@@ -21,7 +21,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16);
     z-index: 10;
     background: var(
       --Gradients-Gradient-5,
