--- a/src/widgets/createOrder/components/createOrderPost/multiPostsList/ui/styles.module.scss
+++ b/src/widgets/createOrder/components/createOrderPost/multiPostsList/ui/styles.module.scss
@@ -10,7 +10,7 @@
   .posts {
     height: 100%;
     background: #fff;
-    padding: 10px 20px;
+    padding: 10px 5px;
     box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16);
     border-radius: 15px;
 
@@ -78,8 +78,11 @@
       display: grid;
       gap: 15px;
       grid-auto-flow: row;
+      max-height: calc((100svh * 0.653) - 47px);
+      overflow: auto;
+      padding: 10px 15px;
 
-      @media (max-width: 768px) {
+      @media (max-width: 992px) {
         gap: 10px;
         max-height: 30vw;
         overflow: auto;
