--- a/src/features/createOrder/addMediaFiles/UI/styles.module.scss
+++ b/src/features/createOrder/addMediaFiles/UI/styles.module.scss
@@ -3,7 +3,7 @@
   grid-template: 1fr / 1fr 1fr;
   column-gap: 20px;
   width: 100%;
-  max-height: 70dvh;
+  max-height: 50dvh;
   overflow: hidden;
 
   @media (max-width: 768px) {
@@ -19,7 +19,7 @@
   .left {
     display: grid;
     grid-auto-flow: row;
-    align-content: center;
+    align-content: space-between;
     gap: 20px;
     padding: 20px;
     border-radius: 25px;
@@ -159,26 +159,6 @@
   }
 
   .right {
-    overflow: auto;
-
-    &.scroll {
-      overflow-y: scroll;
-
-      &::-webkit-scrollbar {
-        width: 2px;
-        height: 2px;
-        background-color: #ccc;
-        border-radius: 5px;
-        cursor: pointer;
-      }
-
-      &::-webkit-scrollbar-thumb {
-        cursor: pointer;
-        background-color: #999;
-        border-radius: 5px;
-      }
-    }
-
     .items {
       display: grid;
       grid-auto-flow: row;
@@ -236,6 +216,15 @@
           svg {
             width: 10px;
             height: 10px;
+          }
+
+          .remove {
+            padding: 10px;
+            border-radius: 50%;
+
+            &:hover {
+              background-color: rgba(0, 0, 0, 0.1);
+            }
           }
         }
       }
