fix: fix is_request_approve adv mnager / manager card

--- a/src/widgets/project/advertiser/UI/advProjects/card/UI/styles.module.scss
+++ b/src/widgets/project/advertiser/UI/advProjects/card/UI/styles.module.scss
@@ -476,10 +476,14 @@
     }
 
     &__icons_manager_request_approve {
-      display: grid;
-      grid-template: 1fr / repeat(var(--columns), 1fr);
+      display: flex;
+      flex-wrap: nowrap;
       column-gap: 10px;
       padding-top: 20px;
+
+      > * {
+        flex: 1 1 50%;
+      }
 
       div {
         display: grid;
