--- a/src/entities/project/ui/subcard/UI/styles.module.scss
+++ b/src/entities/project/ui/subcard/UI/styles.module.scss
@@ -45,22 +45,13 @@
     }
 
     &.grid {
-      grid-template: 1fr / 12fr 4fr 1fr;
-
+      grid-template: 1fr / 12fr 5fr;
       @media (max-width: 992px) {
-        grid-template: 1fr / 8fr 4fr 1fr;
+        grid-template: 1fr / 8fr 5fr;
       }
-
       @media (max-width: 768px) {
         grid-template: unset;
       }
-      // grid-template: 1fr / 12fr 5fr;
-      // @media (max-width: 992px) {
-      //   grid-template: 1fr / 8fr 5fr;
-      // }
-      // @media (max-width: 768px) {
-      //   grid-template: unset;
-      // }
     }
 
     &__left {
