--- a/src/widgets/communication/chat/UI/styles.module.scss
+++ b/src/widgets/communication/chat/UI/styles.module.scss
@@ -119,7 +119,7 @@
     background: url("/images/phoneDisplay/tgbg.png") no-repeat;
     background-size: cover;
     position: relative;
-    // height: inherit;
+    height: inherit;
     display: grid;
     grid-template: min-content 1fr /1fr;
 
