--- a/src/entities/project/ui/managerSubcard/UI/styles.module.scss
+++ b/src/entities/project/ui/managerSubcard/UI/styles.module.scss
@@ -15,6 +15,18 @@
   .subcard {
     display: grid;
     align-items: center;
+    position: relative;
+
+    .platform__icon {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+
+      svg {
+        width: 10px;
+        height: 10px;
+      }
+    }
 
     &.grid__active {
       grid-template: 1fr / 12fr 4fr 1fr;
