--- a/src/entities/project/ui/managerSubcard/UI/styles.module.scss
+++ b/src/entities/project/ui/managerSubcard/UI/styles.module.scss
@@ -8,8 +8,12 @@
   @media (max-width: 768px) {
     padding: 0;
     border-bottom: 0;
-    grid-template: repeat(2, min-content) 1fr / 1fr;
+    grid-template: repeat(3, min-content) 1fr / 1fr;
     height: 100%;
+
+    &.no__chat {
+      grid-template: repeat(2, min-content) 1fr / 1fr;
+    }
   }
 
   .subcard {
