--- a/src/features/order/rejectPost/UI/styles.module.scss
+++ b/src/features/order/rejectPost/UI/styles.module.scss
@@ -1,21 +1,33 @@
+// .button {
+//   width: 100%;
+//   height: 100%;
+//   cursor: pointer;
+//   font-weight: 600;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   font-size: 12px;
+
+//   color: var(--Personal-colors-main);
+//   border-radius: 8px;
+//   border: 0.2px solid rgba(0, 0, 0, 0.1);
+//   background: var(--Personal-colors-White);
+//   box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
+
+//   &:hover {
+//     background: rgb(237, 237, 237);
+//   }
+// }
+
 .button {
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-  font-weight: 600;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 12px;
-
-  color: var(--Personal-colors-main);
+  padding: 0px;
   border-radius: 8px;
-  border: 0.2px solid rgba(0, 0, 0, 0.1);
-  background: var(--Personal-colors-White);
-  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
 
-  &:hover {
-    background: rgb(237, 237, 237);
+  big {
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 1;
   }
 }
 
