--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -13,6 +13,15 @@
   src: url("/fonts/TT Runs Trial Variable Roman.ttf") format("truetype");
 }
 
+html {
+  scroll-behavior: smooth;
+  overflow: hidden;
+}
+
+body {
+  overflow: hidden;
+}
+
 :root {
   // background: rgba(71, 114, 230, 1);
 }
@@ -20,6 +29,7 @@
 body {
   font-family: "TT Runs Trial", "Montserrat Alternates", "Montserrat",
     sans-serif;
+  overflow: hidden;
 
   &::-webkit-scrollbar {
     display: none;
@@ -373,6 +383,7 @@ main {
 .rotate__down {
   transform: rotate(0deg);
   transition: transform 0.5s ease;
+
   &.side {
     transform: rotate(-90deg);
   }
