--- a/src/features/createOrder/addMediaFiles/UI/styles.module.scss
+++ b/src/features/createOrder/addMediaFiles/UI/styles.module.scss
@@ -3,13 +3,14 @@
   grid-template: 1fr / 1fr 1fr;
   column-gap: 20px;
   width: 100%;
-  max-height: 50dvh;
+  max-height: 50svh;
   overflow: hidden;
 
   @media (max-width: 768px) {
     display: flex;
     flex-direction: column-reverse;
     row-gap: 20px;
+    max-height: 70svh;
   }
 
   &.wrapper_empty {
