--- a/src/features/faq/information/UI/styles.module.scss
+++ b/src/features/faq/information/UI/styles.module.scss
@@ -44,14 +44,21 @@
       display: grid;
       grid-auto-flow: row;
       background: var(--Personal-colors-White);
-      border-radius: 25px;
+      border-radius: 10px;
       box-shadow:
-        0px -2px 16px 0px rgba(0, 0, 0, 0.08),
-        0px 6px 14px 0px rgba(0, 0, 0, 0.08);
+        0px -2px 6px 0px rgba(0, 0, 0, 0.08),
+        0px 3px 6px 0px rgba(0, 0, 0, 0.08);
       font-size: 16px;
 
       @media (max-width: 992px) {
         font-size: 14px;
+      }
+
+      @media (max-width: 576px) {
+        border-radius: 7px;
+        box-shadow:
+          0px -2px 6px 0px rgba(0, 0, 0, 0.05),
+          0px 3px 6px 0px rgba(0, 0, 0, 0.05);
       }
 
       &.active {
@@ -89,11 +96,11 @@
           align-items: center;
           align-content: center;
           justify-content: center;
-          border-radius: 50%;
+          border-radius: 10px;
           background: var(--Personal-colors-White, #fff);
           box-shadow:
-            0px -2px 16px 0px rgba(0, 0, 0, 0.08),
-            0px 6px 14px 0px rgba(0, 0, 0, 0.08);
+            0px -2px 6px 0px rgba(0, 0, 0, 0.08),
+            0px 3px 4px 0px rgba(0, 0, 0, 0.08);
           width: 40px;
           height: 40px;
           margin-right: 30px;
@@ -103,7 +110,10 @@
           }
 
           @media (max-width: 576px) {
-            margin-right: 5px;
+            margin-right: 10px;
+            border-radius: 5px;
+            width: 20px;
+            height: 20px;
           }
         }
       }
