--- a/src/features/other/priceList/buyTarif/UI/styles.module.scss
+++ b/src/features/other/priceList/buyTarif/UI/styles.module.scss
@@ -440,6 +440,7 @@
     grid-auto-flow: column;
     align-items: center;
     justify-content: space-between;
+    column-gap: 10px;
 
     .item__left {
       display: grid;
@@ -479,11 +480,20 @@
       display: grid;
       grid-auto-flow: column;
       align-items: center;
-      column-gap: 25px;
+      column-gap: 15px;
 
-      svg {
-        width: 15px;
-        height: 15px;
+      .delete {
+        padding: 15px;
+        border-radius: 50%;
+
+        &:hover {
+          background-color: rgba(0, 0, 0, 0.1);
+        }
+
+        svg {
+          width: 15px;
+          height: 15px;
+        }
       }
     }
   }
