--- a/src/features/cart/addToBasket/UI/styles.module.scss
+++ b/src/features/cart/addToBasket/UI/styles.module.scss
@@ -22,6 +22,7 @@
     justify-content: end;
     text-align: center;
     column-gap: 10px;
+    font-size: 14px;
 
     @media (max-width: 576px) {
       font-size: var(--font-size-option-item-sm);
