--- a/src/features/catalog/catalogCard/components/match/ui/styles.module.scss
+++ b/src/features/catalog/catalogCard/components/match/ui/styles.module.scss
@@ -11,6 +11,14 @@
     row-gap: 5px;
   }
 
+  &.compact {
+    row-gap: 5px;
+
+    p {
+      font-size: 8px;
+    }
+  }
+
   p {
     color: #000;
     text-align: center;
@@ -43,6 +51,46 @@
     border-radius: 50%;
     cursor: pointer;
 
+    &.compact {
+      width: 48px;
+      height: 48px;
+
+      canvas {
+        width: 48px;
+        height: 48px;
+      }
+
+      @media (max-width: 576px) {
+        width: 44px;
+        height: 44px;
+
+        canvas {
+          width: 44px;
+          height: 44px;
+        }
+      }
+
+      @media (max-width: 450px) {
+        width: 38px;
+        height: 38px;
+
+        canvas {
+          width: 38px;
+          height: 38px;
+        }
+      }
+
+      @media (max-width: 375px) {
+        width: 34px;
+        height: 34px;
+
+        canvas {
+          width: 34px;
+          height: 34px;
+        }
+      }
+    }
+
     @media (max-width: 768px) {
       width: 60px;
       height: 60px;
@@ -70,6 +118,10 @@
 
     &.no_match {
       border: 3px solid #ddd;
+
+      &.compact {
+        border-width: 2px;
+      }
     }
   }
 
