--- a/src/features/catalog/catalogCard/components/match/ui/styles.module.scss
+++ b/src/features/catalog/catalogCard/components/match/ui/styles.module.scss
@@ -131,59 +131,23 @@
     align-items: center;
     grid-auto-flow: column;
     gap: 10px;
-    position: absolute;
-    top: -1vw;
-    right: 0;
     padding: 10px;
-    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16);
     width: 30vw;
     background: rgba(255, 255, 255, 1);
-    border-radius: 10px;
-    opacity: 0;
-    visibility: hidden;
-    transition:
-      opacity 0.3s ease,
-      visibility 0.3s ease;
-
-    &.visible {
-      opacity: 1;
-      visibility: visible;
-    }
+    border-radius: 7px;
 
     @media (max-width: 992px) {
       width: 50vw;
     }
 
+    @media (max-width: 768px) {
+      transform: translate(-50px, 50px);
+    }
+
     @media (max-width: 576px) {
-      bottom: 0;
       width: 70vw;
-
-      img {
-        width: 24px;
-        height: 24px;
-      }
-    }
-
-    img {
-      width: 40px;
-      height: 40px;
-    }
-
-    p {
-      line-height: 1.7;
-      color: #8e54e9;
-
-      @media (max-width: 768px) {
-        line-height: 1.3;
-        text-align: left;
-      }
-    }
-  }
-
-  @media (min-width: 577px) {
-    .circle:hover + .match_description {
-      opacity: 1;
-      visibility: visible;
+      border-radius: 5px;
+      padding: 5px;
     }
   }
 }
