--- a/src/widgets/project/advertiser/UI/advProjects/card/UI/styles.module.scss
+++ b/src/widgets/project/advertiser/UI/advProjects/card/UI/styles.module.scss
@@ -14,6 +14,10 @@
   @media (max-width: 768px) {
     min-height: 500px;
     align-items: flex-start;
+
+    &.completed {
+      min-height: 550px;
+    }
   }
 }
 
