--- a/src/features/order/changeChannel/UI/styles.module.scss
+++ b/src/features/order/changeChannel/UI/styles.module.scss
@@ -1,6 +1,6 @@
 .trigger {
   border-radius: 8px;
-  padding: 10px;
+  padding: 10px 5px;
   font-size: 12px;
   font-style: normal;
   font-weight: 600;
