feat: add channels search and fix legalData input lenght

--- a/src/pages/MyChannels/UI/styles.module.scss
+++ b/src/pages/MyChannels/UI/styles.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
   display: grid;
   grid-auto-flow: row;
-  row-gap: var(--row-gap-content-xl);
+  row-gap: var(--row-gap-content-lg);
   margin-top: calc(var(--margin-section-xl) / 2);
   margin-bottom: var(--margin-section-xl);
 
