--- a/src/widgets/adminPanel/channels/UI/styles.module.scss
+++ b/src/widgets/adminPanel/channels/UI/styles.module.scss
@@ -37,5 +37,19 @@
     border-radius: 16px;
     background: var(--color-whites-White, #fff);
     box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16);
+
+    .filter {
+      display: grid;
+      justify-content: flex-end;
+      padding: 20px;
+
+      li {
+        padding: 10px 20px;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+      }
+    }
   }
 }
