fix: add project_id string in orders and fix orders getting cash data

--- a/src/widgets/project/advertiser/UI/styles.module.scss
+++ b/src/widgets/project/advertiser/UI/styles.module.scss
@@ -12,7 +12,7 @@
   }
 
   @media (max-width: 768px) {
-    row-gap: var(--row-gap-content-md);
+    // row-gap: var(--row-gap-content-md);
     margin-top: calc(var(--margin-section-md) / 2);
     margin-bottom: var(--margin-section-md);
   }
