--- a/src/widgets/channel/channelInfo/UI/addToCart/UI/styles.module.scss
+++ b/src/widgets/channel/channelInfo/UI/addToCart/UI/styles.module.scss
@@ -86,6 +86,10 @@
       font-style: normal;
       font-weight: 600;
       line-height: normal;
+
+      @media (max-width: 576px) {
+        font-size: 16px;
+      }
     }
   }
 
