--- a/src/widgets/layouts/components/sidebar/UI/styles.module.scss
+++ b/src/widgets/layouts/components/sidebar/UI/styles.module.scss
@@ -77,9 +77,15 @@
       justify-content: center;
       align-items: center;
 
+      .link {
+        border-radius: 50%;
+        cursor: pointer;
+      }
+
       &__row {
         padding: 5px;
         justify-content: center;
+        align-content: start;
         border-radius: 1000px;
         border: 1px solid var(--Personal-colors-main);
         display: inline-flex;
@@ -96,12 +102,7 @@
           font-size: 18px;
           font-weight: 500;
           line-height: 1;
-          margin-top: 2px;
-          justify-content: center;
-          align-items: center;
-          align-self: stretch;
           color: var(--Personal-colors-White);
-          border-radius: 1000px;
         }
       }
     }
