--- a/src/entities/project/ui/managerSubcard/UI/styles.module.scss
+++ b/src/entities/project/ui/managerSubcard/UI/styles.module.scss
@@ -91,6 +91,7 @@
           display: grid;
           justify-content: center;
           align-items: center;
+          cursor: pointer;
 
           img {
             border-radius: 50%;
