--- a/src/entities/project/ui/subcard/UI/styles.module.scss
+++ b/src/entities/project/ui/subcard/UI/styles.module.scss
@@ -89,6 +89,7 @@
           display: grid;
           justify-content: center;
           align-items: center;
+          cursor: pointer;
 
           img {
             border-radius: 50%;
