--- a/src/widgets/createOrder/components/createOrderPost/UI/styles.module.scss
+++ b/src/widgets/createOrder/components/createOrderPost/UI/styles.module.scss
@@ -260,6 +260,7 @@
             cursor: pointer;
             box-shadow: 0px 2px 5px 1px rgba(71, 114, 230, 0.3);
             background: #fff;
+            width: 100%;
 
             p {
               background: var(--Gradients-Gradient-1);
