--- a/src/widgets/layouts/components/header/UI/dropdownMenu/UI/styles.module.scss
+++ b/src/widgets/layouts/components/header/UI/dropdownMenu/UI/styles.module.scss
@@ -1,277 +1,150 @@
-.dropdown {
-  .menu {
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+.menu {
+  max-width: 800px !important;
+  padding: 0 !important;
 
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    z-index: 10;
+  @media (max-width: 596px) {
+    width: 100% !important;
+  }
 
-    @media (max-width: 768px) {
-      width: 100%;
-    }
-
-    &__content {
-      display: grid;
-      grid-template-rows: repeat(2, min-content);
-      grid-template-columns: 1fr;
-      height: calc(var(--vh) * 100);
-      background: rgba(255, 255, 255, 0.7);
-      z-index: 999;
-      width: 100vw;
-      transform: translate(calc(var(--left-padding-header) * (-1)), -1rem);
+  &__content {
+    &.safari {
+      transform: translate(0, -1rem);
 
       @media (max-width: 768px) {
         width: 100%;
         transform: translate(0, 0);
         background: rgba(255, 255, 255, 0.7);
       }
+    }
+  }
 
-      &.safari {
-        transform: translate(0, -1rem);
+  &__accordion {
+    display: grid;
+    grid-auto-flow: row;
+    row-gap: 8px;
+    // padding: 10px;
+    padding: 0 10px;
+  }
 
-        @media (max-width: 768px) {
-          width: 100%;
-          transform: translate(0, 0);
-          background: rgba(255, 255, 255, 0.7);
-        }
+  &__bottom {
+    display: grid;
+    grid-auto-flow: row;
+    margin-bottom: 120px;
+
+    .switcher {
+      margin: 15px 10px;
+
+      li {
+        padding: 12px 10px;
       }
     }
 
-    &__accordion {
+    .accordion__block {
       display: grid;
       grid-auto-flow: row;
-      row-gap: 8px;
-      // padding: 10px;
-      padding: 0 10px;
-    }
+      row-gap: 5px;
+      margin-top: 15px;
 
-    &__switcher {
-      display: grid;
-      grid-auto-flow: row;
-
-      &__row {
-        --borderSize: 1px;
-        --borderRadius: 25px;
-
-        position: relative;
-        display: grid;
-        grid-template: 1fr / 1fr 1fr;
-        padding: 5px;
-        justify-content: center;
-        margin: 15px 10px;
-        box-shadow: inset 0px 0px 5px 1px rgba($color: #4772e6, $alpha: 0.3);
-        background: rgba($color: #4772e6, $alpha: 0.1);
-        border-radius: var(--borderRadius);
-        overflow: hidden;
-
-        &::before {
-          content: "";
-          position: absolute;
-          top: var(--borderSize);
-          left: var(--borderSize);
-          width: calc(var(--widthRole) - var(--borderSize));
-          height: calc(100% - 2 * var(--borderSize));
-          border-radius: calc(var(--borderRadius) - var(--borderSize));
-          background: var(--Gradients-Gradient-1);
-          box-shadow: 1px 1px 15px rgba($color: #000, $alpha: 0.3);
-          transition: transform 0.3s ease;
-          transform: translateX(var(--translateRole));
-          z-index: 0;
-        }
-
-        p {
-          position: relative;
-          z-index: 1;
-          text-align: center;
-          min-width: 150px;
-          font-size: 18px;
-          font-weight: 500;
-          line-height: 1;
-          padding: 10px;
-          justify-content: center;
-          align-items: center;
-          align-self: stretch;
-          border-radius: 20px;
-          cursor: pointer;
-          transition: color 0.4s ease-in;
-
-          @media (max-width: 576px) {
-            font-size: 16px;
-          }
-
-          @media (max-width: 380px) {
-            font-size: 14px;
-          }
-        }
-
-        .active {
-          -webkit-background-clip: text;
-          -webkit-text-fill-color: var(--Personal-colors-White);
-          background-clip: text;
-          color: var(--Personal-colors-White);
-        }
+      .accordion__title {
+        color: rgba(0, 0, 0, 0.4);
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 1;
+        // padding: 5px 25px;
+        padding: 0 25px;
       }
 
-      .accordion__block {
+      .balance__wrapper {
+        padding: 5px 25px 15px 25px;
         display: grid;
         grid-auto-flow: row;
         row-gap: 5px;
-        margin-top: 15px;
 
-        .accordion__title {
-          color: rgba(0, 0, 0, 0.4);
-          font-size: 12px;
+        .total_balance {
+          font-size: 24px;
           font-style: normal;
           font-weight: 600;
           line-height: 1;
-          // padding: 5px 25px;
-          padding: 0 25px;
         }
 
-        .balance {
-          padding: 5px 25px 15px 25px;
+        span {
+          font-size: 12px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 1;
+        }
 
-          p {
-            font-size: 24px;
-            font-style: normal;
-            font-weight: 600;
-            line-height: 1;
-          }
+        .sub_balance__wrapper {
+          display: grid;
+          grid-auto-flow: row;
+          row-gap: 5px;
 
-          span {
-            font-size: 12px;
-            font-style: normal;
-            font-weight: 500;
-            line-height: 1;
+          .sub_balance__item {
+            display: grid;
+            grid-auto-flow: column;
+            align-content: center;
+            align-items: center;
+            column-gap: 10px;
+            justify-content: space-between;
+
+            &__value {
+              font-size: 20px;
+              font-style: normal;
+              font-weight: 600;
+              line-height: 1;
+              color: rgba(0, 0, 0, 0.6);
+            }
           }
         }
       }
     }
+  }
 
-    &__top {
-      display: grid;
-      padding: 20px;
-      align-content: center;
-      border-bottom: 1px solid #d9d9d9;
-      grid-auto-flow: column;
-      justify-content: space-between;
-      align-items: center;
-      background: rgba(255, 255, 255, 0.7);
-      backdrop-filter: blur(20px);
+  &__top {
+    display: grid;
+    padding: 20px;
+    align-content: center;
+    border-bottom: 1px solid #d9d9d9;
+    grid-auto-flow: column;
+    justify-content: space-between;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(20px);
 
-      height: var(--header-height-xl);
+    height: var(--header-height-xl);
 
-      @media (max-width: 992px) {
-        height: var(--header-height-lg);
-      }
+    @media (max-width: 992px) {
+      height: var(--header-height-lg);
+    }
+
+    @media (max-width: 768px) {
+      height: var(--header-height-md);
+    }
+
+    @media (max-width: 576px) {
+      height: var(--header-height-sm);
+    }
+
+    .logo {
+      color: rgba(0, 0, 0, 0.3);
+      font-size: 34px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      cursor: pointer;
 
       @media (max-width: 768px) {
-        height: var(--header-height-md);
-      }
-
-      @media (max-width: 576px) {
-        height: var(--header-height-sm);
-      }
-
-      .logo {
-        color: rgba(0, 0, 0, 0.3);
-        font-size: 34px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: normal;
-        cursor: pointer;
-
-        @media (max-width: 768px) {
-          font-size: 20px;
-        }
-
-        @media (max-width: 375px) {
-          font-size: 16px;
-        }
+        font-size: 20px;
       }
 
       @media (max-width: 375px) {
-        height: var(--header-height-xs);
+        font-size: 16px;
       }
     }
-  }
-}
 
-.burger__icon_btn {
-  --width: 32px;
-  --height: 32px;
-  --line-height: 1.25px;
-  --color: var(--Personal-colors-black);
-  cursor: pointer;
-  height: var(--height);
-  width: var(--width);
-  display: grid;
-  grid-auto-flow: column;
-  justify-content: center;
-  align-items: center;
-
-  @media (max-width: 768px) {
-    --width: 20px;
-    --height: 20px;
-    --line-height: 1px;
-  }
-
-  .burger__icon {
-    position: relative;
-    width: var(--width);
-    height: var(--line-height);
-    background-color: var(--color);
-    border-radius: 5px;
-
-    &::before,
-    &::after {
-      content: "";
-      display: block;
-      position: absolute;
-      left: 0;
-      width: var(--width);
-      height: var(--line-height);
-      background-color: var(--color);
-      border-radius: 5px;
+    @media (max-width: 375px) {
+      height: var(--header-height-xs);
     }
-
-    &::before {
-      top: calc(var(--line-height) * -6);
-    }
-
-    &::after {
-      top: calc(var(--line-height) * 6);
-    }
-  }
-}
-
-.close__icon {
-  width: 32px;
-  height: 32px;
-  position: relative;
-  cursor: pointer;
-
-  &::before,
-  &::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    background-color: #333;
-    /* Цвет линий крестика */
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
-  }
-
-  &::before {
-    transform: rotate(45deg);
-  }
-
-  &::after {
-    transform: rotate(-45deg);
   }
 }
