fix: fix custom input

--- a/src/widgets/wallet/transactions/components/creditCard/styles.module.scss
+++ b/src/widgets/wallet/transactions/components/creditCard/styles.module.scss
@@ -249,7 +249,8 @@
       @media (max-width: 576px) {
         row-gap: 5px;
 
-        p, span {
+        p,
+        span {
           font-size: 10px;
         }
       }
