feat: finish change topup/withdraw wallet

--- a/src/widgets/wallet/transactions/components/guide/styles.module.scss
+++ b/src/widgets/wallet/transactions/components/guide/styles.module.scss
@@ -2,12 +2,12 @@
   padding: 30px;
   border-radius: 20px;
   // border: 2px dashed var(--Personal-colors-main);
-  background: var(--Personal-colors-White);
-  box-shadow: 0px 1px 4px 1px var(--Personal-colors-main);
-  @media (max-width: 992px) {
-    padding: 15px;
-    border-radius: 15px;
-  }
+  // background: var(--Personal-colors-White);
+  // box-shadow: 0px 1px 4px 1px var(--Personal-colors-main);
+  // @media (max-width: 992px) {
+  //   padding: 15px;
+  //   border-radius: 15px;
+  // }
 }
 
 .text {
