--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -771,7 +771,7 @@ main {
 .frame {
   padding: 24px 32px;
   border-radius: 24px;
-  border: 0.2px solid #bdbdbd;
+  // border: 0.2px solid #bdbdbd;
   background: var(--Personal-colors-White, #fff);
   box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.1);
 }
