--- a/src/shared/ui/wallet-profit-card/styles.module.scss
+++ b/src/shared/ui/wallet-profit-card/styles.module.scss
@@ -11,6 +11,11 @@
     #ffca28 87.75%
   );
   backdrop-filter: blur(21px);
+  cursor: pointer;
+
+  &.active {
+    box-shadow: inset 0px 0px 2px 2px rgba(0, 0, 0, 0.25);
+  }
 
   .header {
     display: grid;
