--- a/src/widgets/wallet/transactions/components/creditCard/styles.module.scss
+++ b/src/widgets/wallet/transactions/components/creditCard/styles.module.scss
@@ -4,20 +4,12 @@
   justify-content: center;
   align-items: center;
 
-  form {
+  .form {
     display: grid;
     grid-auto-flow: row;
     row-gap: 30px;
     align-items: center;
     justify-content: center;
-    padding: 30px 50px;
-    border-radius: 25px;
-    background: var(--Personal-colors-White, #fff);
-    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16);
-
-    @media (max-width: 576px) {
-      padding: 15px;
-    }
   }
 
   .icon {
@@ -103,18 +95,6 @@
       grid-auto-flow: row;
       row-gap: 10px;
       margin-bottom: 12px;
-
-      .label {
-        color: var(--Personal-colors-black);
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: 1;
-
-        @media (max-width: 576px) {
-          text-align: center;
-        }
-      }
     }
 
     .conditions {
@@ -266,7 +246,7 @@
 
       p {
         color: var(--Personal-colors-black);
-        font-size: 16px;
+        font-size: 12px;
         font-style: normal;
         font-weight: 500;
         line-height: 1;
