--- a/src/widgets/wallet/transactions/components/paymentData/styles.module.scss
+++ b/src/widgets/wallet/transactions/components/paymentData/styles.module.scss
@@ -2,31 +2,31 @@
   display: grid;
   grid-auto-flow: row;
   row-gap: 30px;
-  border-radius: 40px;
-  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16);
-  background: var(--Personal-colors-White);
-  padding: 50px;
+  // border-radius: 40px;
+  // box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16);
+  // background: var(--Personal-colors-White);
+  // padding: 50px;
 
-  @media (max-width: 992px) {
-    border-radius: 40px;
-    padding: 40px;
-  }
+  // @media (max-width: 992px) {
+  //   border-radius: 40px;
+  //   padding: 40px;
+  // }
 
-  @media (max-width: 768px) {
-    border-radius: 30px;
-    padding: 30px;
-  }
+  // @media (max-width: 768px) {
+  //   border-radius: 30px;
+  //   padding: 30px;
+  // }
 
-  @media (max-width: 576px) {
-    border-radius: 20px;
-    padding: 15px;
-  }
+  // @media (max-width: 576px) {
+  //   border-radius: 20px;
+  //   padding: 15px;
+  // }
 }
 
 .block {
   display: grid;
   grid-auto-flow: row;
-  row-gap: 40px;
+  row-gap: 30px;
 }
 
 .error_text {
@@ -41,40 +41,6 @@
   display: grid;
   grid-auto-flow: row;
   row-gap: 10px;
-
-  .title {
-    color: var(--Personal-colors-black);
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    text-align: left;
-
-    @media (max-width: 992px) {
-      font-size: 18px;
-    }
-
-    @media (max-width: 576px) {
-      font-size: 16px;
-    }
-  }
-
-  .card_name {
-    color: var(--Personal-colors-black);
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 1;
-    margin-bottom: 10px;
-  }
-
-  span {
-    color: #ccc;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1;
-  }
 }
 
 @keyframes shake {
@@ -173,7 +139,7 @@
 
   p {
     color: var(--Personal-colors-black);
-    font-size: 16px;
+    font-size: 12px;
     font-style: normal;
     font-weight: 500;
     line-height: 1;
