fix: remove chat bg-image

--- a/src/widgets/communication/chat/UI/styles.module.scss
+++ b/src/widgets/communication/chat/UI/styles.module.scss
@@ -116,8 +116,8 @@
   }
 
   &__right {
-    background: url("/images/phoneDisplay/tgbg.png") no-repeat;
-    background-size: cover;
+    // background: url("/images/phoneDisplay/tgbg.png") no-repeat;
+    // background-size: cover;
     position: relative;
     height: inherit;
     display: grid;
