feat: add site filter (need complete)

--- a/src/features/catalog/formatList/UI/styles.module.scss
+++ b/src/features/catalog/formatList/UI/styles.module.scss
@@ -88,3 +88,11 @@
     }
   }
 }
+
+.multiselect {
+  padding: 5px 10px !important;
+
+  span {
+    color: var(--Personal-colors-black) !important;
+  }
+}
