--- a/src/features/cart/addToBasket/UI/styles.module.scss
+++ b/src/features/cart/addToBasket/UI/styles.module.scss
@@ -1,6 +1,7 @@
 .button {
   display: grid;
   grid-template: 1fr / 1fr 1.2fr;
+  gap: 10px;
   align-items: center;
   text-align: center;
   justify-content: space-between;
